# audio_embeddings

./: .gitignore  .pre-commit-config.yaml  README.md  ml_clustering.ipynb  pyproject.toml  pyrightconfig.json
cli/: build_tabular.py  eval_embeddings.py  train.py
src/audio_embeddings/: autoencoder.py  data.py  linear.py  model.py
src/orfium_audio/: __init__.py  data.py  linear.py  model.py
